# goit-pycore-final-project

./: .gitignore  README.md  pull-request-list.md  pyproject.toml  test_serhii_the_best.py
src/personal_assistant/: common.py  exceptions.py  main.py  views.py
src/personal_assistant/addr_book/: classes.py  commands.py  controller.py  exceptions.py  views.py
src/personal_assistant/notes/: classes.py  commands.py  controller.py  exceptions.py  views.py
tests/: input_test.py  test_address_book.py  test_factories.py  test_handlers.py  test_notes.py  test_record.py
